--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forest Adventure</title>
-    <link rel="stylesheet" href="src/styles/main.css">
+  <script type="module" crossorigin src="/assets/main-D9v-mfs5.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/three-lpdRctoP.js">
+  <link rel="modulepreload" crossorigin href="/assets/cannon-CUj-xdNP.js">
+  <link rel="modulepreload" crossorigin href="/assets/nipplejs-O395i_v9.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-DRrimLJq.css">
 </head>
 <body>
     <div id="game-container">
@@ -36,6 +40,5 @@
         </div>
     </div>
     
-    <script type="module" src="src/js/main.js"></script>
 </body>
 </html> 
